gitops/core/fluxcd-addons/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: flux-ui
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: flux-ui
  oidc:
    provider:
      issuer: https://login.delaleusystems.com/dex/
    clientID: envoy-gateway
    clientSecret:
      name: dex-envoy-client
    redirectURL: "https://flux.delaleusystems.com/oauth2/callback"
    logoutPath: "/logout"
